--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mirfishe/PKD-and-Me-Server"
+  },
   "author": "Michael Fisher",
   "license": "ISC",
   "devDependencies": {
