--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "pg": "^7.11.0",
-    "sequelize": "^5.21.1"
+    "sequelize": "^5.21.1",
+    "tedious": "^9.2.3"
   }
 }
