--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pkd-and-me-server",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "private": true,
   "engines": {
     "node": "12.x"
   },
